package com.example.utaste.backend;

public class NutritionInfo {
    public Float energyKcalPer100g;
    public Float carbsPer100g;
    public Float proteinsPer100g;
    public Float fatPer100g;
    public Float saltPer100g;
    public Float fibersPer100g;
}
